# 1-SimpleDebianPackage

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  myDynLib.cpp  myDynLib.h  version.h.in
include/: myDynLib.h
src/: main.cpp  myDynLib.cpp  testTestableFunc.cpp
