cmake_minimum_required(VERSION 3.2)

#add_executable(helloworld main.cpp)


project(helloworld VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})

#find_package(Boost COMPONENTS unit_test_framework REQUIRED)

#configure_file(version.h.in version.h)

add_executable(helloworld_cli main.cpp myDynLib.cpp)

#add_library(cpp01_2 lib.cpp)

#add_executable(test_main_cli test_main.cpp)

set_target_properties(helloworld_cli PROPERTIES
  CXX_STANDARD 14
  CXX_STANDARD_REQUIRED ON
  COMPILE_OPTIONS -Wpedantic -Wall -Wextra
)

#set_target_properties(helloworld_cli PROPERTIES
#  COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK
#  INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR}
#)

#target_link_libraries(helloworld_cli 
#  helloworld
#)

#target_link_libraries(test_main_cli
#  ${Boost_LIBRARIES}
#  cpp01_2
#)

install(TARGETS helloworld_cli RUNTIME DESTINATION bin)

set(CPACK_GENERATOR DEB)

#set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
#set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
#set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")

set(CPACK_PACKAGE_VERSION_MAJOR 0)
set(CPACK_PACKAGE_VERSION_MINOR 0)
set(CPACK_PACKAGE_VERSION_PATCH $ENV{TRAVIS_BUILD_NUMBER})

set(CPACK_PACKAGE_CONTACT boyda_d@mail.ru)

include(CPack)

#enable_testing()

#add_test(test_version_valid test_main_cli)
